<?xml version="1.0"?>
<package format="3">
  <name>ros2_launch_demo</name>
  <version>0.0.0</version>
  <description>ROS2 Launch File Demo</description>

  <maintainer email="your_email@example.com">rohith</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

